--- a/assets/bibliography/2024-05-07-update-frequency-in-mbrl.bib
+++ b/assets/bibliography/2024-05-07-update-frequency-in-mbrl.bib
@@ -271,7 +271,7 @@ publisher = {Curran Associates, Inc.},
 
 
 @InProceedings{Haarnoja2018,
-  title = {{Soft Actor-Critic: Off-Policy Maximum Entropy Deep Reinforcement Learning with a Stochastic Actor}},
+  title = {Soft Actor-Critic: Off-Policy Maximum Entropy Deep Reinforcement Learning with a Stochastic Actor},
   author = {Haarnoja, Tuomas and Zhou, Aurick and Abbeel, Pieter and Levine, Sergey},
   booktitle = {Proceedings of the 35th International Conference on Machine Learning},
   pages = {1861--1870},
@@ -758,6 +758,8 @@ publisher = {Curran Associates, Inc.},
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+
 @article{Pedregosa2011,
  title={Scikit-learn: Machine Learning in {P}ython},
  author={Pedregosa, Fabian and Varoquaux, Ga{\"{e}}l and Gramfort, Alexandre and Michel, Vincent
@@ -786,13 +788,12 @@ publisher = {Curran Associates, Inc.},
   volume={abs/2003.13350}
 }
 
-@misc{Qiao2023,
+@article{Qiao2023,
       title={The primacy bias in Model-based RL}, 
       author={Zhongjian Qiao and Jiafei Lyu and Xiu Li},
       year={2023},
-      eprint={2310.15017},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG}
+      journal = {Arxiv},
+      volume={abs/2310.15017}
 }
 
 @misc{Raffin2019,
