Move the command defs to the top

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -132,16 +132,6 @@ categories:
 - Label Entropy Regularization
 ---
 
-In information theory, the **data processing inequality (DPI)** is a powerful concept. Informally, it tells us that processing data cannot increase the amount of contained information. In this *two-part* blog post, we will explore the DPI and its applications to **function-space variational inference (FSVI)**.
-
-<aside class="l-body box-warning" markdown="1">
-The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information. We will also look at different data processing inequalities that relate different distributions instead of different random variables.
-</aside>
-
-In the first part of this blog post, we will provide intuitive explanations and present mathematical proofs of the DPI. Then, in the second part, we will explore the application of the data processing inequality to function-space variational inference and its relationship to variational inference in general.
-
-The goal of this post is to look at the data processing inequality from different angles to better understand it. We will also consider the equality case (which is arguably the best way to understand inequalities).
-
 {% raw %}
 <div style="display: none;">
 $$\require{mathtools}
@@ -194,6 +184,17 @@ $$\require{mathtools}
 $$
 </div>
 {% endraw %}
+
+In information theory, the **data processing inequality (DPI)** is a powerful concept. Informally, it tells us that processing data cannot increase the amount of contained information. In this *two-part* blog post, we will explore the DPI and its applications to **function-space variational inference (FSVI)**.
+
+<aside class="l-body box-warning" markdown="1">
+The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information. We will also look at different data processing inequalities that relate different distributions instead of different random variables.
+</aside>
+
+In the first part of this blog post, we will provide intuitive explanations and present mathematical proofs of the DPI. Then, in the second part, we will explore the application of the data processing inequality to function-space variational inference and its relationship to variational inference in general.
+
+The goal of this post is to look at the data processing inequality from different angles to better understand it. We will also consider the equality case (which is arguably the best way to understand inequalities).
+
 
 ## Background
 <details markdown="1">
@@ -387,7 +388,7 @@ This is because $$\pof{\w}$$ and $$\qof{\w}$$ are not evolving under the same st
 The correct intuition is that observing the same data $$x$$ does not necessarily bring the posterior beliefs closer together---their divergence depends on the interplay between the specific priors and likelihoods. The data processing inequality does not directly apply to this Bayesian updating scenario.
 
 $$
-\Kale{\qof{\W}}{\pof{\W}} \color{red}{\not\ge} \Kale{\qof{\W \given \mathcal{D}}}{\pof{\W \given \mathcal{D}}},
+\Kale{\qof{\W}}{\pof{\W}} {\color{red}{\not\ge}} \Kale{\qof{\W \given \mathcal{D}}}{\pof{\W \given \mathcal{D}}},
 $$
 
 This counterexample highlights the importance of precisely understanding the assumptions underlying conceptual principles like the DPI. While the DPI provides insight about information dynamics in many cases, it does not universally apply, as exemplified here by Bayesian updating under different priors.
