feat: emperical design

--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -117,11 +117,11 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
 }
 
 @article{MinigridMiniworld23,
-  author       = {Maxime Chevalier-Boisvert and Bolun Dai and Mark Towers and Rodrigo de Lazcano and Lucas Willems and Salem Lahlou and Suman Pal and Pablo Samuel Castro and Jordan Terry},
-  title        = {Minigrid \& Miniworld: Modular \& Customizable Reinforcement Learning Environments for Goal-Oriented Tasks},
-  journal      = {CoRR},
-  volume       = {abs/2306.13831},
-  year         = {2023},
+  title   = {Minigrid \& Miniworld: Modular \& Customizable Reinforcement Learning Environments for Goal-Oriented Tasks},
+  author  = {Maxime Chevalier-Boisvert and Bolun Dai and Mark Towers and Rodrigo de Lazcano and Lucas Willems and Salem Lahlou and Suman Pal and Pablo Samuel Castro and Jordan Terry},
+  journal = {CoRR},
+  volume  = {abs/2306.13831},
+  year    = {2023},
 }
 
 @article{lu2022discovered,
@@ -131,4 +131,30 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
     volume={35},
     pages={16455--16468},
     year={2022}
+}
+
+@misc{schulman2017proximal,
+      title={Proximal Policy Optimization Algorithms}, 
+      author={John Schulman and Filip Wolski and Prafulla Dhariwal and Alec Radford and Oleg Klimov},
+      year={2017},
+      eprint={1707.06347},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@software{gymnax2022github,
+  title = {{gymnax}: A {JAX}-based Reinforcement Learning Environment Library},
+  author = {Robert Tjarko Lange},
+  url = {http://github.com/RobertTLange/gymnax},
+  version = {0.0.4},
+  year = {2022},
+}
+
+@misc{patterson2023empirical,
+      title={Empirical Design in Reinforcement Learning}, 
+      author={Andrew Patterson and Samuel Neumann and Martha White and Adam White},
+      year={2023},
+      eprint={2304.01315},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }
