feat: fix citation

--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -117,7 +117,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
 }
 
 @article{MinigridMiniworld23,
-  title   = {Minigrid \& Miniworld: Modular \& Customizable Reinforcement Learning Environments for Goal-Oriented Tasks},
+  title   = {Minigrid & Miniworld: Modular & Customizable Reinforcement Learning Environments for Goal-Oriented Tasks},
   author  = {Maxime Chevalier-Boisvert and Bolun Dai and Mark Towers and Rodrigo de Lazcano and Lucas Willems and Salem Lahlou and Suman Pal and Pablo Samuel Castro and Jordan Terry},
   journal = {CoRR},
   volume  = {abs/2306.13831},
@@ -143,7 +143,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
 }
 
 @software{gymnax2022github,
-  title = {{gymnax}: A {JAX}-based Reinforcement Learning Environment Library},
+  title = {gymnax: A JAX-based Reinforcement Learning Environment Library},
   author = {Robert Tjarko Lange},
   url = {http://github.com/RobertTLange/gymnax},
   version = {0.0.4},
