--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -158,3 +158,24 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+@inproceedings{osband2020bsuite,
+    title={Behaviour Suite for Reinforcement Learning},
+    author={Osband, Ian and
+            Doron, Yotam and
+            Hessel, Matteo and
+            Aslanides, John and
+            Sezener, Eren and
+            Saraiva, Andre and
+            McKinney, Katrina and
+            Lattimore, Tor and
+            {Sz}epesv{\'a}ri, Csaba and
+            Singh, Satinder and
+            Van Roy, Benjamin and
+            Sutton, Richard and
+            Silver, David and
+            van Hasselt, Hado},
+    booktitle={International Conference on Learning Representations},
+    year={2020},
+    url={https://openreview.net/forum?id=rygf-kSYwH}
+}
