--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -169,7 +169,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
             Saraiva, Andre and
             McKinney, Katrina and
             Lattimore, Tor and
-            {Sz}epesv{\'a}ri, Csaba and
+            Szepesv{\'a}ri, Csaba and
             Singh, Satinder and
             Van Roy, Benjamin and
             Sutton, Richard and
