biblio perfect, grammar pass

--- a/assets/bibliography/2024-05-07-hidden-convex-relu.bib
+++ b/assets/bibliography/2024-05-07-hidden-convex-relu.bib
@@ -13,12 +13,36 @@
   file = {/home/savar/Zotero/storage/J5AT5RQZ/Allen-Zhu et al. - 2019 - A Convergence Theory for Deep Learning via Over-Pa.pdf}
 }
 
+@inproceedings{allen-zhuConvergenceTheoryDeep2019b,
+  title = {A Convergence Theory for Deep Learning via Over-Parameterization},
+  booktitle = {International Conference on Machine Learning},
+  author = {{Allen-Zhu}, Zeyuan and Li, Yuanzhi and Song, Zhao},
+  year = {2019},
+  pages = {242--252},
+  publisher = {PMLR},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/3ZNHUKFP/Allen-Zhu et al. - 2019 - A convergence theory for deep learning via over-pa.pdf}
+}
+
 @article{bachBreakingCurseDimensionality,
   title = {Breaking the Curse of Dimensionality with Convex Neural Networks},
   author = {Bach, Francis},
   abstract = {We consider neural networks with a single hidden layer and non-decreasing positively homogeneous activation functions like the rectified linear units. By letting the number of hidden units grow unbounded and using classical non-Euclidean regularization tools on the output weights, they lead to a convex optimization problem and we provide a detailed theoretical analysis of their generalization performance, with a study of both the approximation and the estimation errors. We show in particular that they are adaptive to unknown underlying linear structures, such as the dependence on the projection of the input variables onto a low-dimensional subspace. Moreover, when using sparsity-inducing norms on the input weights, we show that high-dimensional non-linear variable selection may be achieved, without any strong assumption regarding the data and with a total number of variables potentially exponential in the number of observations. However, solving this convex optimization problem in infinite dimensions is only possible if the non-convex subproblem of addition of a new unit can be solved efficiently. We provide a simple geometric interpretation for our choice of activation functions and describe simple conditions for convex relaxations of the finite-dimensional non-convex subproblem to achieve the same generalization error bounds, even when constant-factor approximations cannot be found. We were not able to find strong enough convex relaxations to obtain provably polynomialtime algorithms and leave open the existence or non-existence of such tractable algorithms with non-exponential sample complexities.},
   langid = {english},
   file = {/home/savar/Zotero/storage/KJTXML6Y/Bach - Breaking the Curse of Dimensionality with Convex N.pdf}
+}
+
+@article{bachBreakingCurseDimensionality2017,
+  title = {Breaking the Curse of Dimensionality with Convex Neural Networks},
+  author = {Bach, Francis},
+  year = {2017},
+  journal = {The Journal of Machine Learning Research},
+  volume = {18},
+  number = {1},
+  pages = {629--681},
+  publisher = {JMLR. org},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/2XJ9PNDJ/Bach - 2017 - Breaking the curse of dimensionality with convex n.pdf}
 }
 
 @misc{baiEfficientGlobalOptimization2022,
@@ -39,12 +63,41 @@
   file = {/home/savar/Zotero/storage/R3P4Q44S/Bai et al. - 2022 - Efficient Global Optimization of Two-layer ReLU Ne.pdf}
 }
 
+@article{baiEfficientGlobalOptimization2023,
+  title = {Efficient Global Optimization of Two-Layer ReLU Networks: Quadratic-Time Algorithms and Adversarial Training},
+  shorttitle = {Efficient Global Optimization of Two-Layer ReLU Networks},
+  author = {Bai, Yatong and Gautam, Tanmay and Sojoudi, Somayeh},
+  year = {2023},
+  month = jun,
+  journal = {SIAM Journal on Mathematics of Data Science},
+  volume = {5},
+  number = {2},
+  pages = {446--474},
+  issn = {2577-0187},
+  doi = {10.1137/21M1467134},
+  urldate = {2023-12-17},
+  langid = {english},
+  file = {/home/savar/Zotero/storage/5M8S99TG/Bai et al. - 2023 - Efficient Global Optimization of Two-Layer ReLU Ne.pdf}
+}
+
 @article{berthierIncrementalLearningDiagonal,
   title = {Incremental Learning in Diagonal Linear Networks},
   author = {Berthier, Raphael},
   abstract = {Diagonal linear networks (DLNs) are a toy simplification of artificial neural networks; they consist in a quadratic reparametrization of linear regression inducing a sparse implicit regularization. In this paper, we describe the trajectory of the gradient flow of DLNs in the limit of small initialization. We show that incremental learning is effectively performed in the limit: coordinates are successively activated, while the iterate is the minimizer of the loss constrained to have support on the active coordinates only. This shows that the sparse implicit regularization of DLNs decreases with time. This work is restricted to the underparametrized regime with anti-correlated features for technical reasons.},
   langid = {english},
   file = {/home/savar/Zotero/storage/J9SSZK2Y/Berthier - Incremental Learning in Diagonal Linear Networks.pdf}
+}
+
+@article{berthierIncrementalLearningDiagonal2023,
+  title = {Incremental Learning in Diagonal Linear Networks},
+  author = {Berthier, Rapha{\"e}l},
+  year = {2023},
+  journal = {Journal of Machine Learning Research},
+  volume = {24},
+  number = {171},
+  pages = {1--26},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/KHE74GYY/Berthier - 2023 - Incremental learning in diagonal linear networks.pdf}
 }
 
 @misc{boursierGradientFlowDynamics2022b,
@@ -75,6 +128,17 @@
   file = {/home/savar/Zotero/storage/B2M446XU/Boursier et al. - 2022 - Gradient flow dynamics of shallow relu networks fo.pdf}
 }
 
+@article{boursierGradientFlowDynamics2022d,
+  title = {Gradient Flow Dynamics of Shallow Relu Networks for Square Loss and Orthogonal Inputs},
+  author = {Boursier, Etienne and {Pillaud-Vivien}, Loucas and Flammarion, Nicolas},
+  year = {2022},
+  journal = {Advances in Neural Information Processing Systems},
+  volume = {35},
+  pages = {20105--20118},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/Y37NGM9A/Boursier et al. - 2022 - Gradient flow dynamics of shallow relu networks fo.pdf}
+}
+
 @inproceedings{chizatGlobalConvergenceGradient2018,
   title = {On the Global Convergence of Gradient Descent for Over-Parameterized Models Using Optimal Transport},
   booktitle = {Advances in Neural Information Processing Systems 31: Annual Conference on Neural Information Processing Systems 2018, NeurIPS 2018, December 3-8, 2018, Montr{\'e}al, Canada},
@@ -84,6 +148,26 @@
   pages = {3040--3050},
   urldate = {2023-03-27},
   file = {/home/savar/Zotero/storage/KEDG8YKZ/Chizat and Bach - 2018 - On the Global Convergence of Gradient Descent for .pdf}
+}
+
+@article{chizatGlobalConvergenceGradient2018a,
+  title = {On the Global Convergence of Gradient Descent for Over-Parameterized Models Using Optimal Transport},
+  author = {Chizat, Lenaic and Bach, Francis},
+  year = {2018},
+  journal = {Advances in neural information processing systems},
+  volume = {31},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/255B6GNI/Chizat and Bach - 2018 - On the global convergence of gradient descent for .pdf}
+}
+
+@article{chizatLazyTrainingDifferentiable2019,
+  title = {On Lazy Training in Differentiable Programming},
+  author = {Chizat, Lenaic and Oyallon, Edouard and Bach, Francis},
+  year = {2019},
+  journal = {Advances in neural information processing systems},
+  volume = {32},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/JILAQRL9/Chizat et al. - 2019 - On lazy training in differentiable programming.pdf}
 }
 
 @misc{chizatLazyTrainingDifferentiable2020,
@@ -101,6 +185,29 @@
   langid = {english},
   keywords = {Computer Science - Machine Learning,Mathematics - Optimization and Control},
   file = {/home/savar/Zotero/storage/YFG26URY/Chizat et al. - 2020 - On Lazy Training in Differentiable Programming.pdf}
+}
+
+@article{coverGeometricalStatisticalProperties1965,
+  title = {Geometrical and Statistical Properties of Systems of Linear Inequalities with Applications in Pattern Recognition},
+  author = {Cover, Thomas M.},
+  year = {1965},
+  journal = {IEEE transactions on electronic computers},
+  number = {3},
+  pages = {326--334},
+  publisher = {IEEE},
+  urldate = {2023-12-17}
+}
+
+@inproceedings{duGradientDescentProvably2018,
+  title = {Gradient Descent Provably Optimizes Over-Parameterized Neural Networks},
+  booktitle = {International Conference on Learning Representations},
+  author = {Du, Simon S. and Zhai, Xiyu and Poczos, Barnabas and Singh, Aarti},
+  year = {2018},
+  month = sep,
+  urldate = {2023-12-17},
+  abstract = {One of the mysteries in the success of neural networks is randomly initialized first order methods like gradient descent can achieve zero training loss even though the objective function is non-convex and non-smooth. This paper demystifies this surprising phenomenon for two-layer fully connected ReLU activated neural networks. For an \$m\$ hidden node shallow neural network with ReLU activation and \$n\$ training data, we show as long as \$m\$ is large enough and no two inputs are parallel, randomly initialized gradient descent converges to a globally optimal solution at a linear convergence rate for the quadratic loss function. Our analysis relies on the following observation: over-parameterization and random initialization jointly restrict every weight vector to be close to its initialization for all iterations, which allows us to exploit a strong convexity-like property to show that gradient descent converges at a global linear rate to the global optimum. We believe these insights are also useful in analyzing deep models and other first order methods.},
+  langid = {english},
+  file = {/home/savar/Zotero/storage/DCQCP7PW/Du et al. - 2018 - Gradient Descent Provably Optimizes Over-parameter.pdf}
 }
 
 @misc{duGradientDescentProvably2019,
@@ -131,6 +238,17 @@
   abstract = {Batch Normalization (BN) is a commonly used technique to accelerate and stabilize training of deep neural networks. Despite its empirical success, a full theoretical understanding of BN is yet to be developed. In this work, we analyze BN through the lens of convex optimization. We introduce an analytic framework based on convex duality to obtain exact convex representations of weight-decay regularized ReLU networks with BN, which can be trained in polynomial-time. Our analyses also show that optimal layer weights can be obtained as simple closed-form formulas in the high-dimensional and/or overparameterized regimes. Furthermore, we find that Gradient Descent provides an algorithmic bias effect on the standard non-convex BN network, and we design an approach to explicitly encode this implicit regularization into the convex objective. Experiments with CIFAR image classification highlight the effectiveness of this explicit regularization for mimicking and substantially improving the performance of standard BN networks.},
   langid = {english},
   file = {/home/savar/Zotero/storage/TILGFXP6/Ergen et al. - 2021 - Demystifying Batch Normalization in ReLU Networks.pdf}
+}
+
+@article{jacotNeuralTangentKernel2018,
+  title = {Neural Tangent Kernel: Convergence and Generalization in Neural Networks},
+  shorttitle = {Neural Tangent Kernel},
+  author = {Jacot, Arthur and Gabriel, Franck and Hongler, Cl{\'e}ment},
+  year = {2018},
+  journal = {Advances in neural information processing systems},
+  volume = {31},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/S76A3MW4/Jacot et al. - 2018 - Neural tangent kernel Convergence and generalizat.pdf}
 }
 
 @misc{jacotNeuralTangentKernel2020a,
@@ -183,6 +301,18 @@
   langid = {english},
   keywords = {Computer Science - Machine Learning},
   file = {/home/savar/Zotero/storage/XZP2XBNM/Mishkin et al. - 2022 - Fast Convex Optimization for Two-Layer ReLU Networ.pdf}
+}
+
+@inproceedings{mishkinFastConvexOptimization2022b,
+  title = {Fast Convex Optimization for Two-Layer Relu Networks: Equivalent Model Classes and Cone Decompositions},
+  shorttitle = {Fast Convex Optimization for Two-Layer Relu Networks},
+  booktitle = {International Conference on Machine Learning},
+  author = {Mishkin, Aaron and Sahiner, Arda and Pilanci, Mert},
+  year = {2022},
+  pages = {15770--15816},
+  publisher = {PMLR},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/XK3PCYP6/Mishkin et al. - 2022 - Fast convex optimization for two-layer relu networ.pdf}
 }
 
 @inproceedings{pilanciNeuralNetworksAre2020,
@@ -246,6 +376,16 @@
   author = {Wang, Yifei and Pilanci, Mert},
   year = {2021},
   urldate = {2023-12-08}
+}
+
+@inproceedings{wangHiddenConvexOptimization2021,
+  title = {The Hidden Convex Optimization Landscape of Regularized Two-Layer Relu Networks: An Exact Characterization of Optimal Solutions},
+  shorttitle = {The Hidden Convex Optimization Landscape of Regularized Two-Layer Relu Networks},
+  booktitle = {International Conference on Learning Representations},
+  author = {Wang, Yifei and Lacotte, Jonathan and Pilanci, Mert},
+  year = {2021},
+  urldate = {2023-12-17},
+  file = {/home/savar/Zotero/storage/MNLSLMV4/Wang et al. - 2021 - The hidden convex optimization landscape of regula.pdf}
 }
 
 @inproceedings{wangHiddenConvexOptimization2022,
