Work on introduction

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -185,16 +185,63 @@ $$
 </div>
 {% endraw %}
 
-In information theory, the **data processing inequality (DPI)** is a powerful concept. Informally, it tells us that processing data cannot increase the amount of contained information. In this *two-part* blog post, we will explore the DPI and its applications to **function-space variational inference (FSVI)**.
+## Introduction
 
-<aside class="l-body box-warning" markdown="1">
-The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information. We will also look at different data processing inequalities that relate different distributions instead of different random variables.
+In information theory, the **data processing inequality (DPI)** expresses a fundamental idea: processing data stochastically cannot increase information. The DPI examines how information flows and transforms through stochastic processes, governing what reductions or bottlenecks may emerge.  
+
+In this blog post, we will first study the DPI, developing intuition through vivid examples and detailed proofs---especially the equality case, which is arguably the best way to understand inequalities. We will consider classic forms of the DPI as well as DPIs relating probability distributions more broadly.
+
+Then, we explore the intriguing connection between DPI and **function-space variational inference (FSVI)**, a modern Bayesian deep learning technique that focuses on the Bayesian predictive posterior rather than the parameter space.
+We apply the DPI to recover several interesting results from the literature in a simple form and build intuitions for the relationship between parameter and functional priors. 
+
+Most importantly, we consider how FSVI can measure a **predictive** divergence between the approximate and true posterior which is independent of parameter symmetries. 
+With parameter symmetries, I refer to different parameters that yield the same predictions, which is very common in over-parameterized neural networks:
+think of parameter symmetries like different paths leading to the same destination; they might look different but end up at the same predictions<d-footnote>Thanks to ChatGPT for this analogy! 🤗</d-footnote>.
+
+As a nice example and application, we relate FSVI to training with knowledge distillation and label entropy regularization: potentially more meaningful priors than the ones usually used in Bayesian neural networks<d-footnote>In many papers, an isotropic Gaussian is used because of its simplicity. Indeed, there are better alternatives, see <https://arxiv.org/abs/2102.06571> and <https://arxiv.org/abs/2105.06868>.</d-footnote>. TK links need correction or dcite!
+
+### TL;DR
+
+The following sections summarize the key takeaways of this blog post. If they don't make sense, don't worry! They will after reading this post.
+
+#### Data Processing Inequality
+
+The data processing inequality examines how information cannot increase due to processing. In information theory, it is usually stated based on a Markov chain of random variables $$X \rightarrow Y \rightarrow Z$$ and their mutual information.
+We will also look at different data processing inequalities that relate different distributions instead of different random variables.
+
+TK edits needed TK
+
+The DPI states that processing data stochastically can only reduce information. More formally:
+
+<aside class="l-body box-note" markdown="1">
+Consider two distributions $$\qof{\W}$$ and $$\pof{\W}$$ over a random variable $$\W$$. Let $$Y = \fof{\W}$$ be a stochastic mapping from $$\W$$ to $$Y$$. Then the DPI states:
+
+$$\Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{Y}}{\pof{Y}}.$$
+
 </aside>
 
-In the first part of this blog post, we will provide intuitive explanations and present mathematical proofs of the DPI. Then, in the second part, we will explore the application of the data processing inequality to function-space variational inference and its relationship to variational inference in general.
+That is, the KL divergence (*🥬 divergence*) between $$\qof{Y}$$ and $$\pof{Y}$$ cannot be larger than between the original $$\qof{\W}$$ and $$\pof{\W}$$. Intuitively, the stochastic mapping $$\opf$$ induces a bottleneck that reduces how well we can distinguish between $$\opp$$ and $$\opq$$. Finally we have equality when $$\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$$.
 
-The goal of this post is to look at the data processing inequality from different angles to better understand it. We will also consider the equality case (which is arguably the best way to understand inequalities).
+The paper "*Understanding Variational Inference in Function-Space*" by Burt et al. (2021)<d-cite key="burt2021understanding"></d-cite> succinctly summarizes the DPI as follows:
 
+<blockquote>
+The data processing inequality states that if two random variables are transformed in this way, they cannot become easier to tell apart.
+</blockquote>
+
+#### (Function-Space) Variational Inference
+
+Variational inference is a powerful technique for approximating complex Bayesian posteriors with simpler distributions. In its usual form, it optimizes an approximate, *variational* distribution to match the *Bayesian **parameter** posterior* as closely as possible. This way, it transforms the problem of Bayesian inference into an optimization problem.
+
+Especially for deep neural networks, obtaining a good approximation of the parameter space can be difficult. One reason is the sheer size of the parameter space. Additionally, the parameterization of a neural network often contains many symmetries (different parameter configurations can lead to the same predictions of the model) that are not taken into account either. 
+
+**Function-space variational inference (FSVI)** side-steps some of these restrictions by only requiring that the variational distribution matches the *Bayesian **predictive** posterior*.
+
+TK
+Whereas regular variational inference regularizes towards a parameter prior, FSVI regularizes towards a data prior. This is especially useful when the parameter prior is not very meaningful, e.g. an isotropic Gaussian prior, which is often used in Bayesian neural networks.
+
+FORMULAS NEEDED HERE
+
+TK summary of FSVI TK
 
 ## Background
 <details markdown="1">
@@ -668,40 +715,7 @@ By understanding the foundations and limitations of the data processing inequali
 
 ---
 
-In the [first part](/2023/08/sdpi_fsvi/) of this two-part series on *Function-Space Variational Inference (**FSVI**)*, we looked at the *Data Processing Inequality (**DPI**)*. 
-In this second part, we finally look at the relationship between FSVI, a method focusing on the Bayesian predictive posterior rather than the parameter space, and the DPI.c
-We will recover several interesting results from the literature in a simple form, and hopefully build intuitions for the relationship between parameter and functional priors. 
-
-Most importantly, we consider how FSVI can measure a **predictive** divergence between the approximate and true posterior which is independent of parameter symmetries. 
-With parameter symmetries, I refer to different parameters that yield the same predictions, which is very common in over-parameterized neural networks:
-think of parameter symmetries like different paths leading to the same destination; they might look different but end up at the same predictions<d-footnote>Thanks to ChatGPT for this analogy! 🤗</d-footnote>.
-
-As a nice example and application, we relate FSVI to training with label entropy regularization: a potentially more meaningful prior than the ones usually used in Bayesian neural networks<d-footnote>In many papers, an isotropic Gaussian is used, even though there are not many reasons given to do so except for its simplicity. Indeed, there are better alternatives, see <https://arxiv.org/abs/2102.06571> and <https://arxiv.org/abs/2105.06868>.</d-footnote>.
-
-Variational inference is a powerful technique for approximating complex Bayesian posteriors with simpler distributions. In its usual form, it optimizes an approximate, *variational* distribution to match the *Bayesian **parameter** posterior* as closely as possible. This way, it transforms the problem of Bayesian inference into an optimization problem.
-
-Especially for deep neural networks, obtaining a good approximation of the parameter space can be difficult. One reason is the sheer size of the parameter space. Additionally, the parameterization of a neural network often contains many symmetries (different parameter configurations can lead to the same predictions of the model) that are not taken into account either. 
-
-Function-space variational inference (FSVI) side-steps some of these restrictions by only requiring that the variational distribution matches the *Bayesian **predictive** posterior*. 
-
-# Data Processing Inequality
-
-The DPI states that processing data stochastically can only reduce information. More formally:
-
-<aside class="l-body box-note" markdown="1">
-Consider two distributions $$\qof{\W}$$ and $$\pof{\W}$$ over a random variable $$\W$$. Let $$Y = \fof{\W}$$ be a stochastic mapping from $$\W$$ to $$Y$$. Then the DPI states:
-
-$$\Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{Y}}{\pof{Y}}.$$
-
-</aside>
-
-That is, the KL divergence (*🥬 divergence*) between $$\qof{Y}$$ and $$\pof{Y}$$ cannot be larger than between the original $$\qof{\W}$$ and $$\pof{\W}$$. Intuitively, the stochastic mapping $$\opf$$ induces a bottleneck that reduces how well we can distinguish between $$\opp$$ and $$\opq$$. Finally we have equality when $$\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$$. See the [first part of this two-part series](https://blog.blackhc.net/2023/08/sdpi_fsvi/) for more details.
-
-The paper "*Understanding Variational Inference in Function-Space*" by Burt et al. (2021)<d-cite key="burt2021understanding"></d-cite> succinctly summarizes the DPI as follows:
-
-<blockquote>
-The data processing inequality states that if two random variables are transformed in this way, they cannot become easier to tell apart.
-</blockquote>
+ 
 
 ## Problem Setting & Notation
 
